--- a/static/templates/posts/new-post.html
+++ b/static/templates/posts/new-post.html
@@ -1,10 +1,10 @@
 <form role="form" ng-submit="vm.submit()">
   <div class="form-group">
-    <label for="post__content">New Post</label>
+    <label for="post__content">New Song Entry</label>
     <textarea class="form-control"
               id="post__content"
               rows="3"
-              placeholder="ex. This is my first time posting on Not Google Plus!"
+              placeholder="ex. This is my first time posting on The Voice"
               ng-model="vm.content">
     </textarea>
   </div>
