--- a/static/templates/posts/post.html
+++ b/static/templates/posts/post.html
@@ -1,17 +1,23 @@
 <div class="row">
-  <div class="col-sm-12">
-    <div class="well">
-      <div class="post">
-        <div class="post__meta">
-          <a href="/+{{ post.author.username }}">
-            +{{ post.author.username }}
-          </a>
-        </div>
+    <div class="col-sm-12">
+        <div class="well">
+            <div class="post">
+                <div class="post__meta">
+                    <a href="/+{{ post.author.username }}">
+                        +{{ post.author.username }}
+                    </a>
+                </div>
 
-        <div class="post__content">
-          {{ post.content }}
+                <div class="post__content">
+                    {{ post.content }}
+                </div>
+                <br>
+
+                <div class="post__content">
+                    <b>Rating:</b> {{ post.average_rating }}
+                </div>
+
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
