still trying to fix issue with null values

--- a/static/templates/posts/post.html
+++ b/static/templates/posts/post.html
@@ -9,7 +9,9 @@
                 </div>
 
                 <div class="post__content">
+                    <a href="/post_details/{{ post.id }}">
                     {{ post.content }}
+                    </a>
                 </div>
                 <br>
 
