--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -36,6 +36,13 @@
 <script type="text/javascript" src="{% static 'javascripts/posts/directives/posts.directive.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/posts/services/posts.service.js' %}"></script>
 
+<script type="text/javascript" src="{% static 'javascripts/post_details/post_details.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/post_details/controllers/post_details.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/post_details/controllers/post_details-settings.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/post_details/services/post_details.service.js' %}"></script>
+
+
+
 <script type="text/javascript" src="{% static 'javascripts/profiles/profiles.module.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/profiles/controllers/profile.controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/profiles/controllers/profile-settings.controller.js' %}"></script>
