20181007 - fixed NaN average score issue

--- a/static/templates/post_details/post_details.html
+++ b/static/templates/post_details/post_details.html
@@ -1,6 +1,6 @@
-<div class="post_rating" ng-show="vm.post_rating">
-  <div class="jumbotron post_rating_header">
-    <h1 class="profile__username">+{{ vm.profile.username }}</h1>
+<div class="post_rating" ng-show="vm.post_detail">
+  <div class="jumbotron post_rating__header">
+    <h1 class="profile__post_details">+{{ vm.post_detail}}</h1>
     <p class="profile__tagline">{{ vm.profile.tagline }}</p>
   </div>
 
